# icubLearningTrajectories

./: .gitignore  CMakeLists.txt  README.md  worldPROMPS.sdf
App/: CMakeLists.txt  recordTrajectoriesGeomagic.xml
App/conf/: grasper.ini
App/models/: CMakeLists.txt  README.md
App/scripts/: README.md  geomagic.sh  oriane-allProgram.xml.template  recordTrajectoriesGeomagic.xml.template
CppProgram/: CMakeLists.txt  GRASPER.cpp  cartesianClient.cpp  cartesianClient.h  grasper.cpp  recordTrajectories.cpp  replayTrajectories.cpp  replayTrajectoriesV2.cpp  replayTrajectoriesWithGeom.cpp  replayTrajectoriesWithIcub.cpp  sendForces.cpp
CppProgram/configFiles/: cartesianSolver.ini  geomagic.sh  simCartesianLeftArm.ini  simCartesianRightArm.ini  world3height.sdf
CppProgram/configFiles/myWorld/: test  world2height.sdf
MatlabProgram/: closeConnection.m  computeAlpha.m  computeBasisFunction.m  computeBestAlpha.m  computeDistribution.m  computeDistributions.m  continueMovement.m  demo_1DOF.m  demo_alphaTestProMPs.m  demo_plot1DOF.m  demo_plotProMP.m  demo_plotProMPs.m  demo_plotProMPs.m~  demo_plotProMPsIcub.m  demo_plotProMPsIcubFrontiers.m  demo_replayProMPs.m  demo_replayProMPsWithGeom.m  demo_replayProMPsWithiCub.m  drawDistribution.m  drawInferedMovement.m  drawInference.m  drawRecoverData.m  draw_compAlphaInf.m  inference.m  inferenceAllAlpha.m  initConnection.m  initializeConnection.m  loadTrajectory.m  mesureDiff.m  partitionTrajectory.m  proMPs.m  proMPs.m~  recoverData.m  replay.m  replayObservedData.m  replayProMP.m  replayRecognition.m  replayRecognitionNbData.m  visualisation.m  visualisationShared.m
MatlabProgram/Data/: icub_frontiers.mat  icub_frontiersWithMatlab.mat  realIcub.mat  traj1_1DOF.mat
MatlabProgram/Data/FLT/front/trajF/: record0.txt  record2.txt  record3.txt
MatlabProgram/Data/FLT/front/trajF2/: record2.txt  record4.txt  record5.txt  record6.txt  record8.txt
MatlabProgram/Data/FLT/left/trajG1/: record0.txt  record2.txt  record3.txt  record9.txt
MatlabProgram/Data/FLT/left/trajG2/: record2.txt  record4.txt  record7.txt
MatlabProgram/Data/FLT/top/trajH1/: record2.txt  record3.txt  record4.txt  record5.txt  record9.txt
MatlabProgram/Data/FLT/top/trajT2/: record1.txt  record2.txt  record7.txt  record8.txt  record9.txt
MatlabProgram/Data/Test_WBD/trajF/: record1.txt  record4.txt  record5.txt  record6.txt  record7.txt  record8.txt  record9.txt
MatlabProgram/Data/Test_WBD/trajF2/: record0.txt  record1.txt  record3.txt  record7.txt  record9.txt
MatlabProgram/Data/Test_WBD/trajG1/: record1.txt  record4.txt  record5.txt  record6.txt  record7.txt  record8.txt
MatlabProgram/Data/Test_WBD/trajG2/: record0.txt  record1.txt  record3.txt  record5.txt  record6.txt  record8.txt  record9.txt
MatlabProgram/Data/Test_WBD/trajH1/: record0.txt  record1.txt  record6.txt  record7.txt  record8.txt
MatlabProgram/Data/Test_WBD/trajT2/: record0.txt  record3.txt  record4.txt  record5.txt  record6.txt
MatlabProgram/Data/bas/oriane_bas/: record0.txt  record3.txt  record4.txt  record6.txt  record7.txt
MatlabProgram/Data/bas/rituraj_bas/: record2.txt  record5.txt  record7.txt  record9.txt
MatlabProgram/Data/bas/thomas_bas/: record3.txt  record4.txt  record6.txt  record7.txt
MatlabProgram/Data/bas/vassilis_bas/: record1.txt  record2.txt  record3.txt  record4.txt  record6.txt  record7.txt  record8.txt
MatlabProgram/Data/haut/oriane_haut/: record2.txt  record4.txt  record8.txt  record9.txt
MatlabProgram/Data/haut/rituraj_high/: record0.txt  record1.txt  record2.txt  record3.txt  record5.txt  record8.txt
MatlabProgram/Data/haut/thomas_haut/: record1.txt  record10.txt  record2.txt  record3.txt  record4.txt  record5.txt  record6.txt  record9.txt
MatlabProgram/Data/haut/vassilis_haut/: record0.txt  record2.txt  record4.txt  record5.txt
MatlabProgram/Data/heights/bottom/oriane_bas/: record1.txt  record2.txt  record5.txt  record8.txt  record9.txt
MatlabProgram/Data/heights/bottom/rituraj_bas/: record0.txt  record1.txt  record3.txt  record4.txt  record6.txt  record8.txt
MatlabProgram/Data/milieu/oriane_mil/: record0.txt  record1.txt  record2.txt  record3.txt  record4.txt  record6.txt  record7.txt  record9.txt
MatlabProgram/Data/milieu/rituraj_mil/: record2.txt  record3.txt  record4.txt  record7.txt  record9.txt
MatlabProgram/Data/milieu/thomas_mil/: record1.txt  record3.txt  record5.txt
MatlabProgram/Data/milieu/vassilis_mil/: record0.txt  record1.txt  record2.txt  record4.txt  record5.txt  record7.txt  record8.txt
MatlabProgram/Data/realIcub/front_to_left/: cartLeftArm.mat
MatlabProgram/Data/traj1/: record0.txt  record1.txt  record10.txt  record11.txt  record12.txt  record13.txt  record14.txt  record15.txt  record16.txt  record17.txt  record18.txt  record19.txt  record2.txt  record20.txt  record21.txt  record22.txt  record23.txt  record24.txt  record25.txt  record26.txt  record27.txt  record28.txt  record29.txt  record3.txt  record30.txt  record31.txt  record32.txt  record33.txt  record34.txt  record35.txt  record36.txt  record37.txt  record38.txt  record39.txt  record4.txt  record40.txt  record41.txt  record42.txt  record43.txt  record44.txt  (+11 more)
MatlabProgram/used_functions/: AlphaBasis.m  LearningFacePosition.m  RecoverData2.m  beginATrajectory.m  beginATrajectoryWithRealIcub.m  closeConnection.m  closeConnectionRealIcub.m  computeAlpha.m  computeBasisFunction.m  computeBestAlpha.m  computeDistribution.m  continueMovement.m  continueMovementiCubGui.m  drawBasisFunction.m  drawDistribution.m  drawInference.m  drawInferenceRescaled.m  drawRecoverData.m  draw_compAlphaInf.m  inference.m  inferenceAlpha.m  initializeConnection.m  initializeConnectionRealIcub.m  loadTrajectory.m  mesureDiff.m  partitionTrajectory.m  recordTrajectoryWithRealIcub.m  replayObservedData.m  replayProMP.m  retrieveRealDataFrontiers.m  retrieveRealDataWithoutOrientation.m  sayType.m  skinContact.m  visualisation.m  visualisation2.m  visualisationShared.m  visualisationbis.m
Videos/: README.md
(+46 files in other folders)
